import { CodeChunk, IParser } from './interfaces/parser.js';
import { ParserFactory } from './parserFactory.js';
import * as fs from 'fs/promises';
import { glob } from 'glob';
import * as path from 'path';
import logger from './utils/logger.js';

export class AnalysisService {
  private parsedProjects: Map<string, CodeChunk[]>; // Cache for parsed projects
  private chunksDir: string;

  constructor(chunksDir: string = './data/chunks') {
    this.parsedProjects = new Map<string, CodeChunk[]>();
    this.chunksDir = chunksDir;
  }

  private toSafeFileName(name: string): string {
    return name.replace(/[^a-zA-Z0-9-_.]/g, '_');
  }

  async analyzeProject(projectPath: string): Promise<void> {
    logger.info(`AnalysisService: Analyzing project: ${projectPath}`);
    const files = await this.getSwiftFiles(projectPath);
    const allChunks: CodeChunk[] = [];

    for (const file of files) {
      const parser = ParserFactory.getParser('swift'); // Swiftパーサーを取得
      const chunks = await parser.parseFile(file);
      for (const chunk of chunks) {
        allChunks.push(chunk);
        await this.saveChunk(chunk);
      }
    }
    this.parsedProjects.set(projectPath, allChunks);
  }

  async getChunk(chunkId: string): Promise<{ content: string } | null> {
    logger.info(`AnalysisService: Getting chunk: ${chunkId}`);
    // Try to get from cache first
    for (const projectChunks of this.parsedProjects.values()) {
      const cachedChunk = projectChunks.find((chunk) => chunk.id === chunkId);
      if (cachedChunk) {
        return { content: cachedChunk.content };
      }
    }
    // If not in cache, try to load from disk
    return this.loadChunk(chunkId);
  }

  private async getSwiftFiles(projectPath: string): Promise<string[]> {
    const swiftFiles = await glob('**/*.swift', { cwd: projectPath, absolute: true });
    return swiftFiles;
  }

  async findFiles(pattern: string): Promise<string[]> {
    const files = await glob(pattern, { absolute: true });
    return files;
  }

  async findFunctions(
    filePath: string,
    functionQuery: string,
  ): Promise<{ id: string; signature: string }[]> {
    const parser = ParserFactory.getParser('swift'); // Swiftパーサーを取得
    const codeChunks = await parser.parseFile(filePath);
    const matchingFunctions = codeChunks.filter(
      (chunk) =>
        chunk.type.includes('function') &&
        (chunk.name.includes(functionQuery) || chunk.signature.includes(functionQuery)),
    );
    return matchingFunctions.map((chunk) => ({ id: chunk.id, signature: chunk.signature }));
  }

  private async saveChunk(chunk: CodeChunk): Promise<void> {
    const safeChunkId = this.toSafeFileName(chunk.id);
    const chunkFilePath = `${this.chunksDir}/${safeChunkId}.json`;
    await fs.mkdir(this.chunksDir, { recursive: true });
    await fs.writeFile(chunkFilePath, JSON.stringify(chunk, null, 2));
    logger.info(`Saved chunk: ${chunk.id} to ${chunkFilePath}`);
  }

  private async loadChunk(chunkId: string): Promise<{ content: string } | null> {
    const safeChunkId = this.toSafeFileName(chunkId);
    const chunkFilePath = `${this.chunksDir}/${safeChunkId}.json`;
    try {
      const fileContent = await fs.readFile(chunkFilePath, 'utf-8');
      const chunk = JSON.parse(fileContent);
      logger.info(`Loaded chunk: ${chunk.id} from ${chunkFilePath}`);
      return { content: chunk.content };
    } catch (error) {
      logger.error(`Error loading chunk ${chunkId}: ${error}`);
      return null;
    }
  }

  async listFunctionsInFile(filePath: string): Promise<{ signature: string }[]> {
    logger.info(`AnalysisService: Listing functions in file: ${filePath}`);
    const parser = ParserFactory.getParser('swift'); // Swiftパーサーを取得
    const codeChunks = await parser.parseFile(filePath);
    return codeChunks
      .filter((chunk) => chunk.type.includes('function'))
      .map((chunk) => ({
        id: chunk.id,
        signature: chunk.signature,
      }));
  }

  async getFunctionChunk(
    filePath: string,
    functionSignature: string,
  ): Promise<{ content: string } | null> {
    logger.info(`AnalysisService: Getting function chunk for ${functionSignature} in ${filePath}`);
    const parser = ParserFactory.getParser('swift'); // Swiftパーサーを取得
    const codeChunks = await parser.parseFile(filePath);
    const targetFunction = codeChunks.find((chunk) => chunk.signature === functionSignature);

    if (targetFunction) {
      return { content: targetFunction.content };
    } else {
      return null;
    }
  }
}
